fix list title word-wrap

--- a/source/scss/_postList.scss
+++ b/source/scss/_postList.scss
@@ -60,6 +60,7 @@
     a {
         display: block;
         color: #333;
+        word-wrap: break-word;
     }
 
     a:hover {
